--- a/.golangci.yml
+++ b/.golangci.yml
@@ -86,6 +86,8 @@ linters-settings:
         disabled: true
       - name: unnecessary-stmt
         disabled: true
+      - name: range-val-in-closure
+        disabled: true
 
       # Rule tuning
       - name: cognitive-complexity
