multi-select test db

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,6 +17,26 @@ on:
         description: "Whether to run a single test. If so, the rest of the input fields are required."
         type: boolean
         default: false
+      cassandra:
+        description: "cassandra"
+        type: boolean
+        default: false
+      sqlite:
+        description: "sqlite"
+        type: boolean
+        default: false
+      mysql8:
+        description: "mysql8"
+        type: boolean
+        default: false
+      postgres12:
+        description: "postgres12"
+        type: boolean
+        default: false
+      postgres12_pgx:
+        description: "postgres12_pgx"
+        type: boolean
+        default: false
       n_runs:
         description: "[Single Test Only] Number of times to repeat the single test per database type"
         type: number
@@ -35,16 +55,16 @@ on:
         options:
           - "16GB RAM (ubuntu-20.04)"
           - "64GB RAM (ubuntu-22.04)"
-      db:
-        description: "[Single Test Only] The DB to use for your tests"
-        type: choice
-        default: "sqlite"
-        options:
-          - cassandra
-          - sqlite
-          - mysql8
-          - postgres12
-          - postgres12_pgx
+#      db:
+#        description: "[Single Test Only] The DB to use for your tests"
+#        type: choice
+#        default: "sqlite"
+#        options:
+#          - cassandra
+#          - sqlite
+#          - mysql8
+#          - postgres12
+#          - postgres12_pgx
 
 
 concurrency: # Auto-cancel existing runs in the PR when a new commit is pushed
@@ -195,6 +215,7 @@ jobs:
       test_timeout: ${{ steps.generate_output.outputs.test_timeout }}
       single_test_args: ${{ steps.generate_output.outputs.single_test_args }}
       runs_on: ${{ steps.generate_output.outputs.runs_on }}
+      dbs: ${{ steps.generate_output.outputs.dbs }}
     steps:
       - id: generate_output
         run: |
@@ -207,6 +228,17 @@ jobs:
             single_test_args="-run ${{ inputs.test_name }} -count ${{ inputs.n_runs }}"
             if [[ "${{ inputs.test_runner }}" == "64GB RAM (ubuntu-22.04)" ]]; then
               runs_on='["ubuntu-latest-16-cores"]'
+            fi 
+            dbs_arr=()
+            if [[ "${{ inputs.cassandra }}" != "true" ]]; then dbs_arr+="cassandra"; fi
+            if [[ "${{ inputs.sqlite }}" != "true" ]]; then dbs_arr+="sqlite"; fi
+            if [[ "${{ inputs.mysql8 }}" != "true" ]]; then dbs_arr+="mysql8"; fi
+            if [[ "${{ inputs.postgres12 }}" != "true" ]]; then dbs_arr+="postgres12"; fi
+            if [[ "${{ inputs.postgres12_pgx }}" != "true" ]]; then dbs_arr+="postgres12_pgx"; fi
+            if [[ ${#dbs_arr[@]} == 0 ]]; then
+              dbs='["sqlite"]'
+            else
+              dbs=$(printf '%s\n' "${dbs_arr[@]}" | jq -R . | jq -s .)
             fi
           fi
           {
@@ -215,7 +247,8 @@ jobs:
             echo "github_timeout=$((timeout+5))"
             echo "test_timeout=${timeout}m"
             echo "single_test_args=$single_test_args"
-            echo "runs_on=$runs_on" 
+            echo "runs_on=$runs_on"
+            echo "dbs=$dbs" 
           } >> "$GITHUB_OUTPUT"
 
   functional-test:
@@ -269,38 +302,38 @@ jobs:
       BUILDKITE_MESSAGE: "{\"job\": \"functional-test\", \"db\": \"${{ matrix.persistence_driver }}\"}"
     steps:
       - uses: ScribeMD/docker-cache@0.3.7
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && inputs.db == env.PERSISTENCE_DRIVER) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           key: docker-${{ runner.os }}-${{ hashFiles(env.DOCKER_COMPOSE_FILE) }}
 
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && inputs.db == env.PERSISTENCE_DRIVER) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && inputs.db == env.PERSISTENCE_DRIVER) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && inputs.db == env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         run: |
           docker compose -f ${{ env.DOCKER_COMPOSE_FILE }} up -d ${{ join(matrix.containers, ' ') }}
 
       - name: Run functional test
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && inputs.db == env.PERSISTENCE_DRIVER) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-functional-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
         run: make functional-test-coverage
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && inputs.db == env.PERSISTENCE_DRIVER)) }}
+        if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
 
       - name: Tear down docker compose
-        if: ${{ (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && inputs.db == env.PERSISTENCE_DRIVER)) && always() }}
+        if: ${{ (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER))) && always() }}
         run: |
           docker compose -f ${{ env.DOCKER_COMPOSE_FILE }} down -v
 
