[DEBUG] fix postgres config arg

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,7 +59,7 @@
 			"cwd": "${workspaceFolder}",
 			"args": [
 				"--env",
-				"development-postgres",
+				"development-postgres12",
 				"start",
 			]
 		},
