--- a/develop/docker-compose/docker-compose.yml
+++ b/develop/docker-compose/docker-compose.yml
@@ -75,6 +75,13 @@ services:
       - prometheus
     volumes:
       - ./grafana/provisioning/:/etc/grafana/provisioning/
+  tempo:
+    image: grafana/tempo:latest
+    container_name: temporal-dev-grafana-tempo
+    command:
+      - "-config.file=/etc/tempo.yaml"
+    volumes:
+      - ./grafana/provisioning/tempo/tempo.yaml:/etc/tempo.yaml
   temporal-ui:
     image: temporalio/ui:latest
     container_name: temporal-dev-ui
