--- a/develop/docker-compose/grafana/provisioning/datasources/prometheus.yml
+++ b/develop/docker-compose/grafana/provisioning/datasources/prometheus.yml
@@ -10,3 +10,13 @@ datasources:
   url: http://prometheus:9090
   access: proxy
   isDefault: false
+- name: Tempo-Linux
+  type: tempo
+  access: proxy
+  url: http://localhost:3200
+  isDefault: false
+- name: Tempo-Darwin
+  type: tempo
+  access: proxy
+  url: http://tempo:3200
+  isDefault: false
