--- a/develop/docker-compose/docker-compose.windows.yml
+++ b/develop/docker-compose/docker-compose.windows.yml
@@ -14,6 +14,14 @@ services:
       - "3000:3000"
     networks:
       - temporal-dev-network
+  tempo:
+    depends_on:
+      - grafana
+    ports:
+      - "3200:3200" # tempo
+      - "4317:4317" # otlp grpc
+    networks:
+      - temporal-dev-network
   temporal-ui:
     environment:
       - TEMPORAL_ADDRESS=host.docker.internal:7233
