--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,9 +14,35 @@ on:
         description: "Commit SHA"
         required: true
       run_single_functional_test:
-        description: "Whether to run a single test. If so, the rest of the input fields are required."
+        description: "Run a single functional test"
         type: boolean
         default: false
+      run_single_unit_test:
+        description: "Run a single unit test (INSTEAD of functional test)"
+        type: boolean
+        default: false
+      unit_test_directory:
+        description: "[Unit Test Only] Directory to run unit tests in"
+        type: string
+        default: "./temporal"
+      n_runs:
+        description: "Number of times to repeat the single test per database type"
+        type: number
+        default: 1
+      test_name:
+        description: "Name of the test to run (i.e. 'TestAcquireShard_DeadlineExceededErrorSuite' or 'TestFunctionalSuite/TestUpdateWorkflow')"
+        type: string
+      timeout_minutes:
+        description: "Test timeout in minutes"
+        type: number
+        default: 120
+      test_runner:
+        description: "Which runner to use. Choose higher RAM if your n_runs is high."
+        type: choice
+        default: "16GB RAM (ubuntu-20.04)"
+        options:
+          - "16GB RAM (ubuntu-20.04)"
+          - "64GB RAM (ubuntu-22.04)"
       cassandra:
         description: "cassandra"
         type: boolean
@@ -25,37 +51,16 @@ on:
         description: "sqlite"
         type: boolean
         default: false
-#      mysql8:
-#        description: "mysql8"
+      #      mysql8:
+      #        description: "mysql8"
+      #        type: boolean
+      #        default: false
+#      postgres12:
+#        description: "postgres12"
 #        type: boolean
 #        default: false
-      postgres12:
-        description: "postgres12"
-        type: boolean
-        default: false
-      n_runs:
-        description: "[Single Test Only] Number of times to repeat the single test per database type"
-        type: number
-        default: 1
-      test_name:
-        description: "[Single Test Only] Name of the test to run (i.e. 'TestAcquireShard_DeadlineExceededErrorSuite' or 'TestFunctionalSuite/TestUpdateWorkflow')"
-        type: string
-      test_directory:
-        description: "[Single Test Only] Directory to run 'go test' in"
-        type: string
-        default: "./tests"
-      timeout_minutes:
-        description: "[Single Test Only] Test timeout in minutes"
-        type: number
-        default: 120
-      test_runner:
-        description: "[Single Test Only] Which runner to use. Choose higher RAM if your n_runs is high."
-        type: choice
-        default: "16GB RAM (ubuntu-20.04)"
-        options:
-          - "16GB RAM (ubuntu-20.04)"
-          - "64GB RAM (ubuntu-22.04)"
-
+          # if [[ "${{ inputs.mysql8 }}" == "true" ]]; then dbs_arr+=("mysql8"); fi
+        # if [[ "${{ inputs.postgres12 }}" == "true" ]]; then dbs_arr+=("postgres12"); fi
 
 concurrency: # Auto-cancel existing runs in the PR when a new commit is pushed
   group: run-tests-${{ github.head_ref || github.run_id }}
@@ -72,6 +77,52 @@ env:
   BUILDKITE_ANALYTICS_TOKEN: ${{ secrets.BUILDKITE_ANALYTICS_TOKEN }}
 
 jobs:
+  set-up-single-test:
+    name: Set up single test
+    runs-on: ubuntu-20.04
+    outputs:
+      shard_indices: ${{ steps.generate_output.outputs.shard_indices }}
+      total_shards: ${{ steps.generate_output.outputs.shards }}
+      github_timeout: ${{ steps.generate_output.outputs.github_timeout }}
+      test_timeout: ${{ steps.generate_output.outputs.test_timeout }}
+      single_test_args: ${{ steps.generate_output.outputs.single_test_args }}
+      runs_on: ${{ steps.generate_output.outputs.runs_on }}
+      dbs: ${{ steps.generate_output.outputs.dbs }}
+    steps:
+      - id: generate_output
+        run: |
+          shards=3
+          timeout=30
+          runs_on='["ubuntu-20.04"]'
+          if [[ "${{ inputs.run_single_functional_test }}" == "true" || "${{ inputs.run_single_unit_test }}" == "true" ]]; then
+            shards=1
+            timeout=${{ inputs.timeout_minutes }}
+            single_test_args="-run ${{ inputs.test_name }} -count ${{ inputs.n_runs }}"
+            if [[ "${{ inputs.test_runner }}" == "64GB RAM (ubuntu-22.04)" ]]; then
+              runs_on='[ "ubuntu-latest-16-cores" ]'
+            fi 
+            dbs_arr=()
+            if [[ "${{ inputs.cassandra }}" == "true" ]]; then dbs_arr+=("cassandra"); fi
+            if [[ "${{ inputs.sqlite }}" == "true" ]]; then dbs_arr+=("sqlite"); fi
+            if [[ ${#dbs_arr[@]} == 0 ]]; then
+              dbs='["sqlite"]'
+            else
+              dbs=$(jq -c -n '$ARGS.positional' --args "${dbs_arr[@]}")
+            fi
+          fi
+          {
+            echo "shard_indices=[ $(seq -s, 0 $((shards-1))) ]"
+            echo "shards=$shards"
+            echo "github_timeout=$((timeout+5))"
+            echo "test_timeout=${timeout}m"
+            echo "single_test_args=$single_test_args"
+            echo "runs_on=$runs_on"
+            echo "dbs=$dbs" 
+          } >> "$GITHUB_OUTPUT"
+      - id: cat_output
+        run: |
+          cat "$GITHUB_OUTPUT"
+
   misc-checks:
     name: Misc checks
     strategy:
@@ -105,7 +156,7 @@ jobs:
   unit-test:
     if: ${{ inputs.run_single_functional_test != true }}
     name: Unit test
-    needs: misc-checks
+    needs: [misc-checks, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -113,6 +164,10 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     env:
       BUILDKITE_MESSAGE: "{\"job\": \"unit-test\"}"
+      SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
+      UNIT_TEST_DIR: ${{ inputs.unit_test_directory }}
+      TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
+      RUN_SINGLE_UNIT_TEST: ${{ inputs.run_single_unit_test }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -124,16 +179,22 @@ jobs:
           go-version-file: 'go.mod'
           check-latest: true
 
-      - name: Run unit test
+      - name: Run unit tests
+        if: ${{ !cancelled() && !inputs.run_single_unit_test }}
         timeout-minutes: 15
         run: make unit-test-coverage
+
+      - name: Run single unit test
+        if: ${{ !cancelled() && inputs.run_single_unit_test }}
+        timeout-minutes: 15
+        run: UNIT_TEST_DIRS=$UNIT_TEST_DIR make unit-test-coverage
 
       - name: Upload test results
         if: ${{ !cancelled() }}
         run: make upload-test-results
 
   integration-test:
-    if: ${{ inputs.run_single_functional_test != true }}
+    if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Integration test
     needs: misc-checks
     strategy:
@@ -177,63 +238,15 @@ jobs:
         run: |
           docker compose -f ${{ env.DOCKER_COMPOSE_FILE }} down -v
 
-
-  set-up-functional-test:
-    name: Set up functional test
-    runs-on: ubuntu-20.04
-    outputs:
-      shard_indices: ${{ steps.generate_output.outputs.shard_indices }}
-      total_shards: ${{ steps.generate_output.outputs.shards }}
-      github_timeout: ${{ steps.generate_output.outputs.github_timeout }}
-      test_timeout: ${{ steps.generate_output.outputs.test_timeout }}
-      single_test_args: ${{ steps.generate_output.outputs.single_test_args }}
-      runs_on: ${{ steps.generate_output.outputs.runs_on }}
-      dbs: ${{ steps.generate_output.outputs.dbs }}
-    steps:
-      - id: generate_output
-        run: |
-          shards=3
-          timeout=30
-          runs_on='["ubuntu-20.04"]'
-          if [[ "${{ inputs.run_single_functional_test }}" == "true" ]]; then
-            shards=1
-            timeout=${{ inputs.timeout_minutes }}
-            single_test_args="-run ${{ inputs.test_name }} -count ${{ inputs.n_runs }}"
-            if [[ "${{ inputs.test_runner }}" == "64GB RAM (ubuntu-22.04)" ]]; then
-              runs_on='["ubuntu-latest-16-cores"]'
-            fi 
-            dbs_arr=()
-            if [[ "${{ inputs.cassandra }}" == "true" ]]; then dbs_arr+=("cassandra"); fi
-            if [[ "${{ inputs.sqlite }}" == "true" ]]; then dbs_arr+=("sqlite"); fi
-            if [[ "${{ inputs.mysql8 }}" == "true" ]]; then dbs_arr+=("mysql8"); fi
-            if [[ "${{ inputs.postgres12 }}" == "true" ]]; then dbs_arr+=("postgres12"); fi
-            if [[ ${#dbs_arr[@]} == 0 ]]; then
-              dbs='["sqlite"]'
-            else
-              dbs=$(jq -c -n '$ARGS.positional' --args "${dbs_arr[@]}")
-            fi
-          fi
-          {
-            echo "shard_indices=[$(seq -s, 0 $((shards-1)))]"
-            echo "shards=$shards"
-            echo "github_timeout=$((timeout+5))"
-            echo "test_timeout=${timeout}m"
-            echo "single_test_args=$single_test_args"
-            echo "runs_on=$runs_on"
-            echo "dbs=$dbs" 
-          } >> "$GITHUB_OUTPUT"
-      - id: cat_output
-        run: |
-          cat "$GITHUB_OUTPUT"
-
   functional-test:
+    if: ${{ inputs.run_single_unit_test != true }}
     name: Functional test
-    needs: [misc-checks, set-up-functional-test]
+    needs: [misc-checks, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
-        runs-on: ${{ fromJson(needs.set-up-functional-test.outputs.runs_on) }}
-        shard_index: ${{ fromJson(needs.set-up-functional-test.outputs.shard_indices) }}
+        runs-on: ${{ fromJson(needs.set-up-single-test.outputs.runs_on) }}
+        shard_index: ${{ fromJson(needs.set-up-single-test.outputs.shard_indices) }}
         name:
           - cass_es
           - cass_es8
@@ -270,36 +283,35 @@ jobs:
             containers: [postgresql]
     runs-on: ${{ matrix.runs-on }}
     env:
-      TEST_TOTAL_SHARDS: ${{ needs.set-up-functional-test.outputs.total_shards }}
+      TEST_TOTAL_SHARDS: ${{ needs.set-up-single-test.outputs.total_shards }}
       TEST_SHARD_INDEX: ${{ matrix.shard_index }}
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
-      SINGLE_TEST_ARGS: ${{ needs.set-up-functional-test.outputs.single_test_args }}
-      FUNCTIONAL_TEST_ROOT: ${{ inputs.test_directory }}
-      TEST_TIMEOUT: ${{ needs.set-up-functional-test.outputs.test_timeout }}
+      SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
+      TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
       BUILDKITE_MESSAGE: "{\"job\": \"functional-test\", \"db\": \"${{ matrix.persistence_driver }}\"}"
     steps:
       - name: Print functional test
-        run: echo "${{ needs.set-up-functional-test.outputs.dbs }}" && echo "$SINGLE_TEST_ARGS"
+        run: echo "${{ needs.set-up-single-test.outputs.dbs }}" && echo "$SINGLE_TEST_ARGS"
       - uses: ScribeMD/docker-cache@0.3.7
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           key: docker-${{ runner.os }}-${{ hashFiles(env.DOCKER_COMPOSE_FILE) }}
 
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -307,16 +319,16 @@ jobs:
           down-flags: -v
 
       - name: Run functional test
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
-        timeout-minutes: ${{ fromJSON(needs.set-up-functional-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
+        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
         run: make functional-test-coverage
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-functional-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
 
   functional-test-xdc:
-    if: ${{ inputs.run_single_functional_test != true }}
+    if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Functional test xdc
     needs: misc-checks
     strategy:
@@ -379,7 +391,7 @@ jobs:
         run: make upload-test-results
 
   functional-test-ndc:
-    if: ${{ inputs.run_single_functional_test != true }}
+    if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Functional test ndc
     needs: misc-checks
     strategy:
@@ -444,7 +456,7 @@ jobs:
         run: make functional-test-ndc-coverage
 
   test-status:
-    if: ${{ inputs.run_single_functional_test != true }}
+    if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Test Status
     needs:
       - unit-test
